--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "scan:logs:no-pii": "node scripts/gdpr/scan-logs-no-pii.mjs",
     "security:api:start": "node apps/api/src/dev-server.js --port=4010 --profile=test",
     "test:security:anti-replay": "node scripts/security/anti-replay.mjs",
-    "test:security:device-proof": "node scripts/security/device-proof.mjs",
-    "test:security:plan-gate": "node scripts/security/plan-gate.mjs",
+    "test:security:replay": "npm run -w apps/api test -- src/mw/__tests__/idempotency-http.spec.ts src/mw/__tests__/idempotency-conflict.spec.ts src/mw/__tests__/idempotency-replay-policy.spec.ts src/mw/__tests__/idempotency-retry.spec.ts",
+    "test:security:device-proof": "npm run -w apps/api test -- src/device-auth.spec.ts src/device-auth.http.spec.ts",
+    "test:security:plan-gate": "npm run -w apps/api test -- tests/plan",
     "test:plan": "npm --workspaces=false -w apps/api run test:plan",
     "test:plan:file": "npm --workspaces=false -w apps/api run test --",
     "mock:api": "prism mock apps/api/openapi/lokaltreu-openapi-v2.0.yaml -p 4010",
@@ -65,6 +66,7 @@
     "glob": "^10.5.0",
     "husky": "^9.1.7",
     "k6": "^0.0.0",
+    "openapi-typescript": "^6.7.2",
     "typescript-eslint": "^8.45.0",
     "vitest": "^3.2.4"
   }
