--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,9 @@ jobs:
 
       - name: Install
         run: npm ci
+        
+      - name: Build workspace types
+        run: npm run -w packages/types build
 
       - name: Lint
         run: npm run lint
