--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,10 +4,14 @@
   "main": "index.js",
   "scripts": {
     "test": "vitest run",
+    "test:security:replay": "vitest run src/mw/__tests__/idempotency-http.spec.ts src/mw/__tests__/idempotency-conflict.spec.ts src/mw/__tests__/idempotency-replay-policy.spec.ts src/mw/__tests__/idempotency-retry.spec.ts",
+    "test:security:device-proof": "vitest run src/device-auth.spec.ts src/device-auth.http.spec.ts",
+    "test:security:plan-gate": "vitest run tests/plan",
     "test:plan": "vitest run tests/plan",
     "test:plan:file": "vitest run",
     "build": "tsc",
     "start": "node dist/index.js",
+    "start:test": "node --input-type=module -e \"process.env.PORT='3001'; const { spawn } = await import('node:child_process'); const child = spawn(process.execPath, ['./dist/index.js'], { stdio: 'inherit', env: process.env }); child.on('exit', (code) => process.exit(code ?? 0));\"",
     "lint": "eslint .",
     "dev": "node --loader ts-node/esm --watch src/index.ts",
     "audit:export:worm": "node --loader ts-node/esm src/jobs/audit-export-worm.ts",
