--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "build:web": "npm -w apps/web run build",
     "build:api": "npm -w apps/api run build",
     "build": "npm run build:web && npm run build:api",
+    "dev": "powershell -NoProfile -Command \"$env:LOKALTREU_API_UPSTREAM='http://127.0.0.1:3001'; npm -w apps/web run dev\"",
+    "dev:mock": "concurrently -k -n PRISM,WEB \"npm --workspaces=false run mock:api:4013\" \"powershell -NoProfile -Command \\\"$env:LOKALTREU_API_UPSTREAM='http://127.0.0.1:4013'; npm -w apps/web run dev\\\"\"",
     "prelint": "node ./scripts/gen-openapi-types.mjs",
     "lint": "npm run lint -w apps/api && npm run lint -w apps/web",
     "start:web": "node apps/web/.next/standalone/server.js",
@@ -30,7 +32,8 @@
     "test:security:plan-gate": "npm run -w apps/api test -- tests/plan",
     "test:plan": "npm --workspaces=false -w apps/api run test:plan",
     "test:plan:file": "npm --workspaces=false -w apps/api run test --",
-    "mock:api": "prism mock apps/api/openapi/lokaltreu-openapi-v2.0.yaml -p 4010",
+    "mock:api": "powershell -NoProfile -Command \"$spec=(Resolve-Path 'apps/api/openapi/lokaltreu-openapi-v2.0.yaml').Path; npx @stoplight/prism-cli mock $spec -p 4010\"",
+    "mock:api:4013": "powershell -NoProfile -Command \"$spec=(Resolve-Path 'apps/api/openapi/lokaltreu-openapi-v2.0.yaml').Path; npx @stoplight/prism-cli mock $spec -p 4013\"",
     "prism:mock": "node ./scripts/prism-mock.mjs",
     "prism:mock:4012": "set PRISM_PORT=4012&& node ./scripts/prism-mock.mjs",
     "prism:mock:4013": "set PRISM_PORT=4013&& node ./scripts/prism-mock.mjs",
