--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -16,7 +16,7 @@
   ],
   "scripts": {
     "lint": "node -e \"console.log('lint: skip @lokaltreu/types')\"",
-    "gen:openapi": "openapi-typescript ../../apps/api/openapi/lokaltreu-openapi-v2.0.yaml -o src/openapi.ts",
+    "gen:openapi": "npx openapi-typescript ../../apps/api/openapi/lokaltreu-openapi-v2.0.yaml -o src/openapi.ts",
     "build": "npm run gen:openapi && tsc -p tsconfig.json",
     "test": "node -e \"console.log('test: skip @lokaltreu/types')\" --",
     "test:plan": "node -e \"console.log('test:plan: skip @lokaltreu/types')\"",
