--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -33,6 +33,7 @@
     "pg": "^8.13.1"
   },
   "devDependencies": {
+    "@stoplight/prism-cli": "^5.14.2",
     "@typescript-eslint/eslint-plugin": "^8.52.0",
     "@typescript-eslint/parser": "^8.52.0",
     "@vitest/coverage-v8": "^3.2.4",
