--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -28,6 +28,7 @@
     "libsodium-wrappers": "^0.7.15"
   },
   "devDependencies": {
+    "@stoplight/prism-cli": "^5.14.2",
     "@typescript-eslint/eslint-plugin": "^8.52.0",
     "@typescript-eslint/parser": "^8.52.0",
     "typescript-eslint": "^8.52.0"
