--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,6 +14,7 @@
     "start:test": "node --input-type=module -e \"process.env.PORT='3001'; const { spawn } = await import('node:child_process'); const child = spawn(process.execPath, ['./dist/index.js'], { stdio: 'inherit', env: process.env }); child.on('exit', (code) => process.exit(code ?? 0));\"",
     "lint": "eslint .",
     "dev": "node --loader ts-node/esm --watch src/index.ts",
+    "gdpr:dsr": "vitest run tests/dsr/dsr.http.spec.ts",
     "audit:export:worm": "node --loader ts-node/esm src/jobs/audit-export-worm.ts",
     "audit:monitor:gap": "node --loader ts-node/esm src/jobs/audit-export-gap-check.ts",
     "audit:retention:worm": "node --loader ts-node/esm src/jobs/audit-retention-worm.ts",
