--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint",
     "test": "vitest run",
     "test:plan": "node -e \"console.log('test:plan: skip web')\"",
-    "test:plan:file": "node -e \"console.log('test:plan:file: skip web')\""
+    "test:plan:file": "node -e \"console.log('test:plan:file: skip web')\"",
+    "gdpr:dsr": "node -e \"console.log('gdpr:dsr: skip web')\""
   },
   "dependencies": {
     "autoprefixer": "^10.4.21",
