--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -13,6 +13,7 @@
     "start": "node dist/index.js",
     "start:test": "node --input-type=module -e \"process.env.PORT='3001'; const { spawn } = await import('node:child_process'); const child = spawn(process.execPath, ['./dist/index.js'], { stdio: 'inherit', env: process.env }); child.on('exit', (code) => process.exit(code ?? 0));\"",
     "lint": "eslint src tests vitest.config.ts vitest.setup.ts --ignore-pattern \"packages/types/**\"",
+    "lint:openapi": "spectral lint ./openapi/lokaltreu-openapi-v2.0.yaml -r ../../.spectral.yaml",
     "dev": "node --loader ts-node/esm --watch src/index.ts",
     "gdpr:dsr": "vitest run tests/dsr/dsr.http.spec.ts",
     "audit:export:worm": "node --loader ts-node/esm src/jobs/audit-export-worm.ts",
@@ -35,6 +36,7 @@
   },
   "devDependencies": {
     "@stoplight/prism-cli": "^5.14.2",
+    "@stoplight/spectral-cli": "^6.15.0",
     "@typescript-eslint/eslint-plugin": "^8.52.0",
     "@typescript-eslint/parser": "^8.52.0",
     "@vitest/coverage-v8": "^3.2.4",
