--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
+    "lint:openapi": "node -e \"console.log('lint:openapi: skip web')\"",
     "test": "vitest run",
     "test:plan": "node -e \"console.log('test:plan: skip web')\"",
     "test:plan:file": "node -e \"console.log('test:plan:file: skip web')\"",
@@ -24,6 +25,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@stoplight/prism-cli": "^5.14.2",
+    "@stoplight/spectral-cli": "^6.15.0",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.0.0",
     "@types/node": "^20",
