--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dev:mock": "concurrently --kill-others-on-fail -n PRISM,WEB \"npm --workspaces=false run mock:api:4013\" \"powershell -NoProfile -Command \\\"$env:LOKALTREU_API_UPSTREAM='http://127.0.0.1:4013'; npm -w apps/web run dev\\\"\"",
     "prelint": "node ./scripts/gen-openapi-types.mjs",
     "lint": "npm run lint -w apps/api && npm run lint -w apps/web",
+    "lint:openapi": "spectral lint ./apps/api/openapi/lokaltreu-openapi-v2.0.yaml -r ./.spectral.yaml",
     "start:web": "node apps/web/.next/standalone/server.js",
     "start:api": "node apps/api/dist/server-main.js",
     "agents:sentinel:node": "node scripts/agents-sentinel-check.mjs",
