--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint",
     "lint:openapi": "node -e \"console.log('lint:openapi: skip web')\"",
     "test": "vitest run",
+    "test:e2e": "playwright test",
     "test:plan": "node -e \"console.log('test:plan: skip web')\"",
     "test:plan:file": "node -e \"console.log('test:plan:file: skip web')\"",
     "gdpr:dsr": "node -e \"console.log('gdpr:dsr: skip web')\""
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@playwright/test": "^1.58.0",
     "@stoplight/prism-cli": "^5.14.2",
     "@stoplight/spectral-cli": "^6.15.0",
     "@testing-library/jest-dom": "^6.9.1",
