--- a/apps/web/.gitignore
+++ b/apps/web/.gitignore
@@ -41,6 +41,9 @@ yarn-error.log*
 next-env.d.ts
 
 # Playwright
-/test-results/
 /playwright-report/
+/test-results/
+/.playwright/
+.last-run.json
+/traces/
 
