--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,3 +53,44 @@ jobs:
 
       - name: RFC7807 conformity checks
         run: npm run problemjson:check
+
+      - name: Install Playwright browsers (web)
+        run: npx playwright install --with-deps chromium
+
+      - name: Start Prism mock (DSR) in background
+        shell: bash
+        run: |
+          npx prism mock "$GITHUB_WORKSPACE/apps/api/openapi/lokaltreu-openapi-v2.0.yaml" -p 4010 --host 127.0.0.1 > /tmp/prism.log 2>&1 &
+          echo $! > /tmp/prism.pid
+
+      - name: Wait for Prism healthcheck
+        shell: bash
+        run: |
+          for i in {1..30}; do
+            if curl -fsS http://127.0.0.1:4010/.well-known/jwks.json > /dev/null; then
+              echo "Prism ready"
+              exit 0
+            fi
+            sleep 2
+          done
+          echo "Prism did not become ready in time"
+          echo "---- prism.log (tail) ----"
+          tail -n 200 /tmp/prism.log || true
+          exit 1
+
+      - name: Web E2E (Playwright)
+        env:
+          LOKALTREU_API_UPSTREAM: http://127.0.0.1:4010
+          E2E_BASE_URL: http://127.0.0.1:3000
+        run: npm -w apps/web run test:e2e
+
+      - name: Upload Playwright report (on failure)
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-report
+          path: |
+            apps/web/playwright-report
+            apps/web/test-results
+          if-no-files-found: ignore
+
