--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,7 +8,10 @@
     "start": "next start",
     "lint": "eslint",
     "lint:openapi": "node -e \"console.log('lint:openapi: skip web')\"",
+    "prism:mock": "npx prism mock ../api/openapi/lokaltreu-openapi-v2.0.yaml -p 4010 --host 127.0.0.1",
     "test": "vitest run",
+    "test:e2e": "playwright test",
+    "test:e2e:ci": "npm run test:e2e",
     "test:plan": "node -e \"console.log('test:plan: skip web')\"",
     "test:plan:file": "node -e \"console.log('test:plan:file: skip web')\"",
     "gdpr:dsr": "node -e \"console.log('gdpr:dsr: skip web')\""
@@ -24,6 +27,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@playwright/test": "^1.58.0",
     "@stoplight/prism-cli": "^5.14.2",
     "@stoplight/spectral-cli": "^6.15.0",
     "@testing-library/jest-dom": "^6.9.1",
