--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,7 +13,7 @@
     "test:e2e": "playwright test",
     "test:e2e:smoke": "node -e \"const { spawnSync } = require('child_process'); const specs = require('./e2e/smoke.manifest.js'); const isWin = process.platform === 'win32'; const cmd = isWin ? 'cmd.exe' : 'npx'; const args = isWin ? ['/d','/s','/c','npx','playwright','test', ...specs] : ['playwright','test', ...specs]; const res = spawnSync(cmd, args, { stdio: 'inherit' }); if (res.error) { console.error(res.error); process.exit(1); } process.exit(res.status ?? 1);\"",
     "test:e2e:full": "playwright test",
-    "test:e2e:ci": "node -e \"const { spawnSync } = require('child_process'); const specs = require('./e2e/smoke.manifest.js'); const isWin = process.platform === 'win32'; const cmd = isWin ? 'cmd.exe' : 'npx'; const args = isWin ? ['/d','/s','/c','npx','playwright','test','--workers=1','--retries=1','--reporter=line', ...specs] : ['playwright','test','--workers=1','--retries=1','--reporter=line', ...specs]; const res = spawnSync(cmd, args, { stdio: 'inherit' }); if (res.error) { console.error(res.error); process.exit(1); } process.exit(res.status ?? 1);\"",
+    "test:e2e:ci": "node ./e2e/run-e2e-ci.js",
     "test:plan": "node -e \"console.log('test:plan: skip web')\"",
     "test:plan:file": "node -e \"console.log('test:plan:file: skip web')\"",
     "gdpr:dsr": "node -e \"console.log('gdpr:dsr: skip web')\""
