--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,7 +61,10 @@ jobs:
         env:
           LOKALTREU_API_UPSTREAM: http://127.0.0.1:4010
           E2E_RUNNER_OWNS_WEBSERVER: "1"
-        run: node apps/web/e2e/run-e2e-ci.js
+        run: |
+          echo "E2E_BASE_URL=$E2E_BASE_URL"
+          echo "E2E_RUNNER_OWNS_WEBSERVER=$E2E_RUNNER_OWNS_WEBSERVER"
+          node apps/web/e2e/run-e2e-ci.js
 
       - name: Upload Playwright report (on failure)
         if: failure()
