ci: set Prism upstream env during build

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,9 @@ jobs:
       # um Drift/Untracked Changes im CI zu vermeiden.
 
       - name: Build
+        env:
+          LOKALTREU_API_UPSTREAM: http://127.0.0.1:4010
+          LOKALTREU_STAFF_API_UPSTREAM: http://127.0.0.1:4010
         run: npm run build
 
       - name: Tests + Coverage
@@ -60,10 +63,15 @@ jobs:
       - name: Web E2E (Playwright - Smoke, Runner owns)
         env:
           LOKALTREU_API_UPSTREAM: http://127.0.0.1:4010
+          LOKALTREU_STAFF_API_UPSTREAM: http://127.0.0.1:4010
           E2E_RUNNER_OWNS_WEBSERVER: "1"
         run: |
+          echo "CI GIT_SHA=$GITHUB_SHA BRANCH=${GITHUB_REF_NAME:-unknown}"
+          sed -n '1,120p' apps/web/e2e/run-e2e-ci.js
           echo "CI E2E_BASE_URL='$E2E_BASE_URL'"
           echo "CI E2E_RUNNER_OWNS_WEBSERVER='$E2E_RUNNER_OWNS_WEBSERVER'"
+          echo "CI LOKALTREU_API_UPSTREAM='$LOKALTREU_API_UPSTREAM'"
+          echo "CI LOKALTREU_STAFF_API_UPSTREAM='$LOKALTREU_STAFF_API_UPSTREAM'"
           node apps/web/e2e/run-e2e-ci.js
 
       - name: Upload Playwright report (on failure)
