--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,7 +73,9 @@ jobs:
           LOKALTREU_API_UPSTREAM: http://127.0.0.1:4010
           LOKALTREU_STAFF_API_UPSTREAM: http://127.0.0.1:4010
           E2E_RUNNER_OWNS_WEBSERVER: "1"
+        timeout-minutes: 12
         run: |
+          set -euo pipefail
           echo "CI GIT_SHA=$GITHUB_SHA BRANCH=${GITHUB_REF_NAME:-unknown}"
           sed -n '1,120p' apps/web/e2e/run-e2e-ci.js
           echo "CI E2E_BASE_URL='$E2E_BASE_URL'"
@@ -81,6 +83,25 @@ jobs:
           echo "CI LOKALTREU_API_UPSTREAM='$LOKALTREU_API_UPSTREAM'"
           echo "CI LOKALTREU_STAFF_API_UPSTREAM='$LOKALTREU_STAFF_API_UPSTREAM'"
           node apps/web/e2e/run-e2e-ci.js
+
+      - name: E2E cleanup (always)
+        if: always()
+        shell: bash
+        run: |
+          echo "== open ports (3002/4010) =="
+          (ss -lntp || true) | egrep ':(3002|4010)\b' || true
+
+          echo "== processes (prism/next/playwright/node) =="
+          ps aux | egrep 'prism|next|playwright|node' | head -n 80 || true
+
+          echo "== kill likely leftovers =="
+          pkill -f "prism mock" || true
+          pkill -f "apps/web/server.js" || true
+          pkill -f "next" || true
+          pkill -f "playwright" || true
+
+          echo "== open ports after kill =="
+          (ss -lntp || true) | egrep ':(3002|4010)\b' || true
 
       - name: Upload Playwright report (on failure)
         if: failure()
